[AS2-5]: Fixed some alignment issues for rignet section mobile screen

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -104,7 +104,9 @@
   &__column {
     &:last-child {
       box-sizing: border-box;
+      @include for-media($tablet){
       padding-left: 0.6rem;
+      }
       @include for-media($desktop) {
         padding-left: 1rem;
       }
